[gd_scene load_steps=13 format=3 uid="uid://b8rjsdd368it0"]

[ext_resource type="PackedScene" uid="uid://crdfmk8dcqddc" path="res://Scenes/idle_arrow_down.tscn" id="1_dqcw8"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_e2bxo"]
[ext_resource type="PackedScene" uid="uid://bnm7fqbj225ew" path="res://Scenes/BG.tscn" id="2_osykm"]
[ext_resource type="PackedScene" uid="uid://dnnupowagrqst" path="res://Scenes/idle_arrow_left.tscn" id="2_umwhe"]
[ext_resource type="PackedScene" uid="uid://k072icyuq05q" path="res://Scenes/idle_arrow_right.tscn" id="3_oplun"]
[ext_resource type="PackedScene" uid="uid://yadjoy202m7o" path="res://Scenes/idle_arrow_up.tscn" id="4_w718u"]
[ext_resource type="AudioStream" uid="uid://bugh832baa6rh" path="res://Assets/Sounds/tutorial.mp3" id="6_hye2t"]
[ext_resource type="FontFile" uid="uid://uq8kdwahrvwm" path="res://Assets/Fonts/manaspc.ttf" id="7_d8b7l"]
[ext_resource type="PackedScene" uid="uid://54ogdgm10iay" path="res://Player/player.tscn" id="8_4smfa"]
[ext_resource type="Script" path="res://Scenes/gameOverLabel.gd" id="10_vtlcp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnmyl"]
size = Vector2(1752, 121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn22a"]
size = Vector2(110, 566)

[node name="Game" type="Node2D"]
script = ExtResource("1_e2bxo")
metadata/_edit_vertical_guides_ = [-420.0]

[node name="BG" parent="." instance=ExtResource("2_osykm")]

[node name="Player" parent="." instance=ExtResource("8_4smfa")]
position = Vector2(1003, 292)

[node name="CreateArrows" type="Node2D" parent="."]
position = Vector2(-82, -442)
scale = Vector2(1.5, 1.5)

[node name="Spawner_ArrowUp" type="Marker2D" parent="CreateArrows"]
position = Vector2(398.333, 470)

[node name="Spawner_ArrowDown" type="Marker2D" parent="CreateArrows"]
position = Vector2(298.333, 470)

[node name="Spawner_ArrowLeft" type="Marker2D" parent="CreateArrows"]
position = Vector2(207.333, 470)

[node name="Spawner_ArrowRight" type="Marker2D" parent="CreateArrows"]
position = Vector2(498.333, 470)

[node name="Idle_ArrowDown" parent="." instance=ExtResource("1_dqcw8")]
position = Vector2(364, 462.5)
scale = Vector2(2, 2)

[node name="ArrowDown" type="Button" parent="Idle_ArrowDown"]
modulate = Color(1, 1, 1, 0)
offset_left = -16.0
offset_top = -13.5
offset_right = 16.0
offset_bottom = 14.5
metadata/_edit_use_anchors_ = true

[node name="Idle_ArrowLeft" parent="." instance=ExtResource("2_umwhe")]
position = Vector2(229, 462.5)
scale = Vector2(2, 2)

[node name="ArrowLeft" type="Button" parent="Idle_ArrowLeft"]
modulate = Color(1, 1, 1, 0)
offset_left = -16.0
offset_top = -14.0
offset_right = 16.0
offset_bottom = 14.0
metadata/_edit_use_anchors_ = true

[node name="Idle_ArrowRight" parent="." instance=ExtResource("3_oplun")]
position = Vector2(667, 463.5)
scale = Vector2(2, 2)

[node name="ArrowRight" type="Button" parent="Idle_ArrowRight"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 14.0
metadata/_edit_use_anchors_ = true

[node name="Idle_ArrowUp" parent="." instance=ExtResource("4_w718u")]
position = Vector2(515, 461.5)
scale = Vector2(2, 2)

[node name="ArrowUp" type="Button" parent="Idle_ArrowUp"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -14.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = 13.0
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_hye2t")
autoplay = true

[node name="Score" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Score"]
offset_left = 128.0
offset_top = 17.0
offset_right = 448.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("7_d8b7l")
theme_override_font_sizes/font_size = 40
text = "000"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Score"]
offset_left = 176.0
offset_top = 23.0
offset_right = 239.0
offset_bottom = 52.0
text = "Score : "

[node name="Taps" type="Node2D" parent="."]

[node name="Label2" type="Label" parent="Taps"]
offset_left = 476.0
offset_top = 14.0
offset_right = 796.0
offset_bottom = 62.0
theme_override_fonts/font = ExtResource("7_d8b7l")
theme_override_font_sizes/font_size = 40
text = "00
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Taps"]
offset_left = 551.0
offset_top = 21.0
offset_right = 610.0
offset_bottom = 54.0
text = "Taps : "

[node name="Miss" type="Node2D" parent="."]
position = Vector2(388, -1)

[node name="Label2" type="Label" parent="Miss"]
offset_left = 476.0
offset_top = 14.0
offset_right = 796.0
offset_bottom = 62.0
theme_override_fonts/font = ExtResource("7_d8b7l")
theme_override_font_sizes/font_size = 40
text = "00
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Miss"]
offset_left = 551.0
offset_top = 21.0
offset_right = 610.0
offset_bottom = 54.0
text = "Miss : "
metadata/_edit_use_anchors_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(779, 600)
shape = SubResource("RectangleShape2D_nnmyl")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(820, -54)
shape = SubResource("RectangleShape2D_nnmyl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-42, 277)
shape = SubResource("RectangleShape2D_dn22a")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1654, 277)
shape = SubResource("RectangleShape2D_dn22a")

[node name="Button" type="Button" parent="."]
offset_left = 1424.0
offset_top = 19.0
offset_right = 1591.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Back to menu"

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -107.0
offset_top = 530.0
offset_right = 1693.0
offset_bottom = 730.0
metadata/_edit_use_anchors_ = true

[node name="gameOverLabel" type="Node2D" parent="."]
position = Vector2(320, 160)
script = ExtResource("10_vtlcp")

[node name="gameOverLabel" type="Label" parent="gameOverLabel"]
offset_right = 938.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.772549, 0, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.784314, 0, 0.788235, 1)
theme_override_font_sizes/font_size = 170
text = "Game Over"

[node name="gameOverScoreLabel" type="Label" parent="gameOverLabel"]
offset_left = 29.0
offset_top = -12.0
offset_right = 140.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 27
text = "Your Score : "

[node name="gameOverScoreValue" type="Label" parent="gameOverLabel"]
offset_left = 191.0
offset_top = -15.0
offset_right = 354.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 27

[connection signal="pressed" from="Idle_ArrowDown/ArrowDown" to="Player" method="_on_arrow_down_pressed"]
[connection signal="pressed" from="Idle_ArrowDown/ArrowDown" to="Idle_ArrowDown" method="_on_arrow_down_pressed"]
[connection signal="button_down" from="Idle_ArrowLeft/ArrowLeft" to="Player" method="_on_arrow_left_button_down"]
[connection signal="button_up" from="Idle_ArrowLeft/ArrowLeft" to="Player" method="_on_arrow_left_button_up"]
[connection signal="pressed" from="Idle_ArrowLeft/ArrowLeft" to="Player" method="_on_arrow_left_pressed"]
[connection signal="pressed" from="Idle_ArrowLeft/ArrowLeft" to="Idle_ArrowLeft" method="_on_arrow_left_pressed"]
[connection signal="button_down" from="Idle_ArrowRight/ArrowRight" to="Player" method="_on_arrow_right_button_down"]
[connection signal="button_up" from="Idle_ArrowRight/ArrowRight" to="Player" method="_on_arrow_right_button_up"]
[connection signal="pressed" from="Idle_ArrowRight/ArrowRight" to="Player" method="_on_arrow_right_pressed"]
[connection signal="pressed" from="Idle_ArrowRight/ArrowRight" to="Idle_ArrowRight" method="_on_arrow_right_pressed"]
[connection signal="pressed" from="Idle_ArrowUp/ArrowUp" to="Player" method="_on_arrow_up_pressed"]
[connection signal="pressed" from="Idle_ArrowUp/ArrowUp" to="Idle_ArrowUp" method="_on_arrow_up_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
